--- a/src/index.css
+++ b/src/index.css
@@ -1,19 +1,140 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 body {
   margin: 0;
   padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+  box-sizing: border-box;
+  font-family: 'Roboto', sans-serif !important;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+.delete{
+  color: cornflowerblue;
+  text-decoration: line-through;
+}
+nav{
+  max-width: 100%;
+  padding: 10px 25%;
+  background-color: cornflowerblue;
+  display: flex;
+  justify-content: end;
+  
+}
+nav button{
+  background-color: aliceblue;
+  color: #292929;
+  font-weight: bold;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 20px;
+  cursor: pointer;
+}
+h1{
+  text-align: center;
+  font-size: 4em;
+}
+.wrapper{
+  margin: 0 auto;
+  max-width: 90%;
+  width: fit-content;
+  box-shadow: 0px 0px 15px 5px rgba(0, 0, 0, 0.4);
+  /*border: 2px solid cornflowerblue;*/
+  border-radius: 2rem;
+  padding: 30px;
+}
+.radioButtons{
+  display: flex;
+  justify-content: center;
+  gap: 10px
 }
 
-.delete{
-  color: red;
-  text-decoration: line-through;
+
+
+.toDoForm{
+  display: flex;
+  justify-content: center;
+  width: fit-content;
+  margin: 0 auto;
+  position: relative;
+  width: 100%;
+}
+.toDoForm input{
+  width: 100%;
+  border: none;
+}
+.input{
+  padding: 10px 20px;
+  width: 60%;
+  border: 2px solid cornflowerblue;
+  border-radius: 10px 0 0 10px;
+  position: relative;
+}
+.input span{
+  position: absolute;
+  top: 50%;
+  left: 20px;
+  transform: translate(0,-50%);
+  font-size: 0.9rem;
+  pointer-events: none;
+  transition: transform 400ms;
+  background-color: aliceblue;
+  padding: 0 5px;
+  font-weight: bold;
+  border-left: 2px solid aliceblue;
+  border-right: 2px solid aliceblue;
+  color: cornflowerblue;
+
+}
+.input input:focus ~ span,
+.input input:valid ~ span{
+  transform: translate(0,-30px);
+  border-left: 2px solid cornflowerblue;
+  border-right: 2px solid cornflowerblue;
+  color: cornflowerblue;
+}
+.toDoForm input:focus{
+outline: none;
+}
+.toDoForm button{
+  padding: 10px 10px;
+  width: 40%;
+  background-color: cornflowerblue;
+  border: 2px solid cornflowerblue;
+  color: aliceblue;
+  border-radius: 0 10px 10px 0;
+  font-weight: bold;
+  cursor: pointer;
+}
+.listWrapper{
+  min-height: 250px;
+  display: flex;
+  justify-content: center;
+}
+
+.listWrapper .noContent{
+  max-width: 10rem;
+  height: auto;
+  align-self: center;
+}
+
+.list{
+  list-style-type: none;
+  width: 100%;
+  padding: 20px 0;
+}
+.item .text{
+  display: flex;
+  align-items: center;
+}
+
+.item{
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  padding: 10px 0;
+  border-bottom: 2px solid #aaa;
+}
+.item img{
+  width: 25px;
+  height: auto;
 }
