--- a/client/src/index.css
+++ b/client/src/index.css
@@ -77,11 +77,11 @@ h1{
   font-size: 0.9rem;
   pointer-events: none;
   transition: transform 400ms;
-  background-color: aliceblue;
+  background-color: white;
   padding: 0 5px;
   font-weight: bold;
-  border-left: 2px solid aliceblue;
-  border-right: 2px solid aliceblue;
+  border-left: 2px solid white;
+  border-right: 2px solid white;
   color: cornflowerblue;
 
 }
