--- a/client/src/index.css
+++ b/client/src/index.css
@@ -7,7 +7,23 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
+.logout{
+  display: flex;
+  flex-direction: column;
+}
+.logout p {
+  margin: 0;
+  font-weight: bold !important;
+  text-align: end;
+}
+.logout a{
+  text-align: end;
+  cursor: pointer;
+  color: white;
+}
+.strong{
+  font-weight: bold !important;
+}
 .delete{
   color: cornflowerblue;
   text-decoration: line-through;
@@ -16,18 +32,18 @@ nav{
   max-width: 100%;
   padding: 10px 25%;
   background-color: cornflowerblue;
+  text-align: center;
+  min-height: 40px;
   display: flex;
-  justify-content: end;
-  
+  align-items: center;
+  justify-content: center;
 }
-nav button{
-  background-color: aliceblue;
-  color: #292929;
-  font-weight: bold;
-  border: none;
-  padding: 10px 20px;
-  border-radius: 20px;
-  cursor: pointer;
+.right{
+  justify-content: end;
+}
+nav h2{
+  height: 100%;
+  margin: 0;
 }
 h1{
   text-align: center;
@@ -47,8 +63,6 @@ h1{
   justify-content: center;
   gap: 10px
 }
-
-
 
 .toDoForm{
   display: flex;
