front end login reg

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -76,14 +76,14 @@ h1{
   width: 100%;
   border: none;
 }
-.input{
+.toDoForm .input{
   padding: 10px 20px;
   width: 60%;
   border: 2px solid cornflowerblue;
   border-radius: 10px 0 0 10px;
   position: relative;
 }
-.input span{
+.toDoForm .input span{
   position: absolute;
   top: 50%;
   left: 20px;
@@ -99,8 +99,8 @@ h1{
   color: cornflowerblue;
 
 }
-.input input:focus ~ span,
-.input input:valid ~ span{
+.toDoForm .input input:focus ~ span,
+.toDoForm .input input:valid ~ span{
   transform: translate(0,-30px);
   border-left: 2px solid cornflowerblue;
   border-right: 2px solid cornflowerblue;
@@ -151,4 +151,107 @@ outline: none;
 .item img{
   width: 25px;
   height: auto;
+}
+
+.loginWrapper{
+  margin: 0 auto;
+  max-width: 90%;
+  width: fit-content;
+  box-shadow: 0px 0px 15px 5px rgba(0, 0, 0, 0.4);
+  /*border: 2px solid cornflowerblue;*/
+  border-radius: 2rem;  
+  padding: 30px;
+  margin-top: 50px;
+
+}
+
+.loginWrapper .links{
+  display: flex;
+  justify-content: space-evenly;
+  color: cornflowerblue;
+}
+
+.loginWrapper .links a{
+  cursor: pointer;
+  position: relative;
+}
+.loginWrapper .links .strong::after{
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 3px;
+  background-color: cornflowerblue;
+  bottom: -5px;
+  left: 0;
+}
+
+.loginForm{
+  margin-top: 40px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+}/*
+.loginForm input{
+  margin-bottom: 30px;
+}*/
+
+
+.loginForm input{
+  width: 100%;
+  border: none;
+}
+.loginForm .input{
+  padding: 10px 20px;
+  width: calc(100% - 45px);
+  border: 2px solid cornflowerblue;
+  border-radius: 15px;
+  position: relative;
+  margin-bottom: 30px;
+}
+.loginForm .input span{
+  position: absolute;
+  top: 50%;
+  left: 20px;
+  transform: translate(0,-50%);
+  font-size: 0.9rem;
+  pointer-events: none;
+  transition: transform 400ms;
+  background-color: white;
+  padding: 0 5px;
+  font-weight: bold;
+  border-left: 2px solid white;
+  border-right: 2px solid white;
+  color: cornflowerblue;
+
+}
+.loginForm .input input:focus ~ span,
+.loginForm .input input:valid ~ span{
+  transform: translate(0,-30px);
+  border-left: 2px solid cornflowerblue;
+  border-right: 2px solid cornflowerblue;
+  color: cornflowerblue;
+}
+.loginForm input:focus{
+outline: none;
+}
+.loginForm button{
+  padding: 10px 10px;
+  width: 100%;
+  background-color: cornflowerblue;
+  color: white;
+  border: 2px solid cornflowerblue;
+  border-radius: 20px;
+  font-weight: bold;
+  cursor: pointer;
+  transition-duration: 250ms;
+}
+.loginForm button:hover{
+  background-color: rgb(74, 134, 245);
+}
+
+.loginForm #info{
+  text-align: center;
+  color: cornflowerblue;
+  font-size: 14px;
+  margin-top: 10px;
 }
