--- a/client/src/index.css
+++ b/client/src/index.css
@@ -110,8 +110,10 @@ h1{
 outline: none;
 }
 .toDoForm button{
+  position: relative;
   padding: 10px 10px;
   width: 40%;
+  max-width: 40%;
   background-color: cornflowerblue;
   border: 2px solid cornflowerblue;
   color: aliceblue;
@@ -123,6 +125,7 @@ outline: none;
   min-height: 250px;
   display: flex;
   justify-content: center;
+  position: relative;
 }
 
 .listWrapper .noContent{
@@ -322,3 +325,56 @@ outline: none;
   }
 }
  /* loader ################################################ */
+
+   .lds-ring {
+  display: grid;
+  place-items: center;
+  position: absolute;
+  min-width: 100px;
+  height: 25px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+}
+.lds-ring div {
+  box-sizing: border-box;
+  display: block;
+  position: absolute;
+  width: 25px;
+  height: 25px;
+  margin: 0px;
+  border: 4px solid #fff;
+  border-radius: 50%;
+  animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
+  border-color: #fff transparent transparent transparent;
+}
+.lds-ring div:nth-child(1) {
+  animation-delay: -0.45s;
+}
+.lds-ring div:nth-child(2) {
+  animation-delay: -0.3s;
+}
+.lds-ring div:nth-child(3) {
+  animation-delay: -0.15s;
+}
+@keyframes lds-ring {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+
+.todosLoader{
+  width: 100% ;
+  height: 100% ;
+}
+
+.todosLoader div{
+  width: 70px;
+  height: 70px;
+border: 8px solid cornflowerblue;
+border-color: cornflowerblue transparent transparent transparent;
+}
